WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50071
[Qt] Fix compilation with !ENABLE(OFFLINE_WEB_APPLICATIONS) and !ENABLE(TILED_BACKING_STORE) for WebKit2
https://bugs.webkit.org/show_bug.cgi?id=50071
Summary
[Qt] Fix compilation with !ENABLE(OFFLINE_WEB_APPLICATIONS) and !ENABLE(TILED...
Laszlo Gombos
Reported
2010-11-25 05:43:18 PST
This is primary for consistency for the WebKit1 based offering.
Attachments
proposed patch
(5.73 KB, patch)
2010-11-25 05:50 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
2nd try, resolve conflict with trunk
(4.27 KB, patch)
2010-11-25 06:48 PST
,
Laszlo Gombos
ossy
: review+
ossy
: commit-queue-
Details
Formatted Diff
Diff
fixed ChangeLog
(4.20 KB, patch)
2010-12-01 20:52 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-11-25 05:50:14 PST
Created
attachment 74864
[details]
proposed patch
Laszlo Gombos
Comment 2
2010-11-25 06:48:51 PST
Created
attachment 74870
[details]
2nd try, resolve conflict with trunk
Csaba Osztrogonác
Comment 3
2010-11-30 01:12:08 PST
Comment on
attachment 74870
[details]
2nd try, resolve conflict with trunk View in context:
https://bugs.webkit.org/attachment.cgi?id=74870&action=review
> WebKit2/ChangeLog:6 > + [Qt] Fix compilation with !ENABLE(OFFLINE_WEB_APPLICATIONS) and !ENABLE(JAVASCRIPT_DEBUGGER) and > + !ENABLE(TILED_BACKING_STORE) for WebKit2
Please remove !ENABLE(JAVASCRIPT_DEBUGGER) from ChangeLog, because there isn't any ENABLE(JAVASCRIPT_DEBUGGER) guard in this patch. :) Otherwise LGTM, r=me.
Csaba Osztrogonác
Comment 4
2010-11-30 01:14:32 PST
(In reply to
comment #3
)
> Please remove !ENABLE(JAVASCRIPT_DEBUGGER) from ChangeLog, because there isn't > any ENABLE(JAVASCRIPT_DEBUGGER) guard in this patch. :) Otherwise LGTM, r=me.
Or add fix for !ENABLE(JAVASCRIPT_DEBUGGER) case if it is necessary.
Laszlo Gombos
Comment 5
2010-12-01 20:52:19 PST
Created
attachment 75349
[details]
fixed ChangeLog
WebKit Commit Bot
Comment 6
2010-12-02 16:39:16 PST
Comment on
attachment 75349
[details]
fixed ChangeLog Clearing flags on attachment: 75349 Committed
r73221
: <
http://trac.webkit.org/changeset/73221
>
WebKit Commit Bot
Comment 7
2010-12-02 16:39:21 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 8
2010-12-02 18:28:24 PST
The commit-queue encountered the following flaky tests while processing
attachment 75349
[details]
: animations/suspend-resume-animation.html fast/events/tabindex-focus-blur-all.html Please file bugs against the tests. These tests were authored by
alice.liu@apple.com
,
cmarrin@apple.com
, and
pam@chromium.org
. The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug