2010-12-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Csaba Osztrogonác.

        [Qt] Fix compilation with !ENABLE(OFFLINE_WEB_APPLICATIONS) and
        !ENABLE(TILED_BACKING_STORE) for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=50071

        Add appropriate guards. No functional change if guards are set.

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::setActualVisibleContentsRect):
        * UIProcess/TiledDrawingAreaProxy.cpp:
        * UIProcess/qt/TiledDrawingAreaProxyQt.cpp:
        * UIProcess/qt/TiledDrawingAreaTileQt.cpp:
        * UIProcess/qt/WebContextQt.cpp:
        (WebKit::WebContext::applicationCacheDirectory):
        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/63647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73221 268f45cc-cd09-0410-ab3c-d52691b4dbfc