WebKit2/UIProcess/qt/WebContextQt.cpp
@@ -33,7 +33,11 @@ namespace WebKit {
 
 String WebContext::applicationCacheDirectory()
 {
+#if ENABLE(OFFLINE_WEB_APPLICATIONS)
     return WebCore::cacheStorage().cacheDirectory();
+#else
+    return QString();
+#endif
 }
 
 void WebContext::platformInitializeWebProcess(WebProcessCreationParameters&)
